- added project explanation - added csv to setup semester times